IGNITE-11155 Output warning in case JDK internals access is not enabled